add customer-id
